console/kustomize/origin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: openshift-console
  labels:
    app: console
    component: ui
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console
      component: ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: console
      labels:
        app: console
        component: ui
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
    spec:
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/master: ""
      restartPolicy: Always
      serviceAccountName: console
      serviceAccount: console
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 40
      priorityClassName: system-cluster-critical
      containers:
        - resources:
            requests:
              cpu: 10m
              memory: 100Mi
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - "25"
          name: console
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          command:
            - /opt/bridge/bin/bridge
            - "--public-dir=/opt/bridge/static"
            - "--config=/var/console-config/console-config.yaml"
            - "--service-ca-file=/var/service-ca/service-ca.crt"
          startupProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          image: ${IMAGE}
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 120
