console/kustomize/origin/downloads-service.yaml
# Default 'downloads' service manifest.
# The 'downloads' route will be pointing to the 'downloads' deployment. 
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-console
  name: downloads
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: console
    component: downloads
  type: ClusterIP
  sessionAffinity: None
